update api spec
